# stardust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  UX_UI_IMPROVEMENTS.md  docker-compose.yml  flake.nix  security_plan.md  update.sh
.github/actions/: README.md
.github/actions/launcher-build-bootstrap/: action.yml
.github/actions/launcher-clippy/: action.yml
.github/actions/launcher-collect-bundles/: action.yml
.github/actions/launcher-inject-dmg-webloc/: action.yml
.github/actions/launcher-install-deps/: action.yml
.github/actions/launcher-set-version/: action.yml
.github/actions/launcher-setup-linux/: action.yml
.github/actions/launcher-setup-macos-signing/: action.yml
.github/actions/launcher-setup-toolchain/: action.yml
.github/actions/launcher-tauri-build/: action.yml
.github/actions/launcher-upload-ci-artifacts/: action.yml
.github/actions/launcher-upload-release/: action.yml
.github/actions/launcher-wait-token/: action.yml
.github/workflows/: backend.yml  ci.yml  launcher-build.yml  launcher-release.yml  mod-release.yml
admin-web/: README.md  UI_REFERENCES.md  index.html  package-lock.json  package.json  vite.config.ts
admin-web/m/: index.html
admin-web/public/: manifest.json
admin-web/src/: App.tsx  BuildDetail.tsx  CreateBuildForm.tsx  FileEditor.tsx  FileManager.tsx  FileUpload.tsx  Login.tsx  api.ts  fileUtils.ts  format.ts  main.tsx  styles.css  types.ts
admin-web/src/app/: useAuth.tsx  viewMode.ts
admin-web/src/desktop/: BuildsPage.tsx  DesktopApp.tsx
admin-web/src/mobile/: MobileAccounts.tsx  MobileApp.tsx  MobileBuildDetail.tsx  MobileBuilds.tsx  MobileCustomization.tsx  MobileLogin.tsx  MobileOverview.tsx  MobileSettings.tsx  main.tsx  mobile.css
admin-web/src/ui/: CheckResults.tsx  PlayerCardModal.tsx  PlayerSkinTab.tsx  PlayerSkinViewer3D.tsx  SkinHead.tsx  feedback.tsx  icons.tsx  shadcn.tsx  useBodyScrollLock.ts
admin-web/src/views/: AccountsView.tsx  BuildCheckView.tsx  BuildsView.tsx  CustomizationView.tsx  NewsView.tsx  OverviewView.tsx  SettingsView.tsx
crates/admin-server/: Cargo.toml
crates/admin-server/src/: main.rs
crates/auth-server/: Cargo.toml
crates/auth-server/src/: main.rs  mojang.rs  yggdrasil.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/store/: Cargo.toml
crates/store/migrations/: 0001_init.sql  0002_account_bans.sql  0003_telegram.sql  0004_telegram_buttons.sql  0005_telegram_parse_mode.sql  0006_composite_index_tg_2fa.sql  0007_playtime.sql  0008_build_files_disabled.sql  0009_customization.sql  0010_customization_idempotent.sql  0011_badge_delete_set_null.sql  0012_strip_vs16_from_badges.sql  0013_hash_session_tokens.sql  0014_add_client_ip_to_challenges.sql  0015_add_document_to_outbox.sql  0016_last_joined_at.sql  0017_news.sql
crates/store/src/: build.rs  lib.rs  telegram.rs
crates/telegram-bot/: Cargo.toml
crates/telegram-bot/src/: main.rs
deploy/: .env.example  Dockerfile  admin-web.Dockerfile  admin-web.nginx.conf  docker-compose.yml  runtime.Dockerfile  squid.conf  update.sh  website.Dockerfile  website.nginx.conf
docs/: ARCHITECTURE.md  MACOS_INSTALL.md  ROADMAP.md  modpack-optional-mods.md
launcher/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
launcher/scripts/: patch-skin-renderer.js
launcher/src/: App.tsx  api.ts  badge-icons.ts  format.ts  main.tsx  motion.tsx  platform.ts  preferences.ts  skin.tsx  skinNormalize.ts  styles.css  types.ts  useDelayedUnmount.ts
launcher/src-tauri/: .tauri-signing.key.pub  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/dmg/: Установка.webloc
launcher/src-tauri/icons/: icon.icns
launcher/src-tauri/nsis/: hooks.nsh
launcher/src-tauri/src/: backend.rs  commands.rs  game_guard.rs  java.rs  lib.rs  main.rs  minecraft.rs  modpack.rs  paths.rs  progress.rs  sha256.rs  update.rs
launcher/src/components/: AccountSection.tsx  Aurora.tsx  CustomizeModal.tsx  ErrorBoundary.tsx  FaceAvatar.tsx  LogViewerModal.tsx  LoginScreen.tsx  MainScreen.tsx  MinecraftNickname.tsx  ModsSection.tsx  NewsScreen.tsx  NickCustomizer.tsx  OnboardingScreen.tsx  PasswordInput.tsx  SettingsScreen.tsx  SkinModal.tsx  SkinViewer3D.tsx  TitleBar.tsx  UpdateModal.tsx
native-launcher/: Cargo.toml  installer.nsi
native-launcher/src/: game_guard.rs  main.rs  minecraft.rs  modpack.rs  paths.rs  progress.rs  styles.rs  updater.rs
native-launcher/src/api/: mod.rs
native-launcher/src/screens/: login.rs  main_screen.rs  mod.rs  settings.rs  title_bar.rs
packaging/: README.md
packaging/arch/: PKGBUILD
packaging/debian/: README.md
packaging/fedora/: stardust.spec
packaging/flatpak/: com.stardust.launcher.yml
packaging/homebrew/: stardust.rb
packaging/macos/: README.md
scripts/: install-linux.sh  release.sh
scripts/ci/: build-bootstrap.sh  collect-launcher-bundles.sh  inject-dmg-webloc.sh  set-launcher-version.sh  set-mod-version.sh  setup-linux-deps.sh  setup-macos-signing.sh  sha256-file.sh  update-linux.sh  update-macos.sh  upload-launcher-release.sh
stardust-mod/: .gitignore  README.md  build.gradle  settings.gradle
stardust-mod/src/main/java/dev/stardust/mod/: StardustBadgeConfig.java  StardustChatNotifications.java  StardustClient.java  StardustCrashReporter.java  StardustHttpProvider.java  StardustMod.java  StardustServerConfig.java  StardustSuperChallengeHealth.java  StardustTabIntegration.java
stardust-mod/src/main/java/dev/stardust/mod/mixin/: ChatListenerMixin.java  PlayerListMixin.java
stardust-mod/src/main/resources/: fabric.mod.json  pack.mcmeta  stardust.mixins.json
stardust-mod/src/main/resources/assets/minecraft/lang/: ru_ru.json
stardust-mod/src/main/resources/data/blazeandcave/function/: one_second_timer.mcfunction
website/: index.html  package-lock.json  package.json  styles.css
website/public/: main.js  manifest.json
website/src/: main.js
(+30 files in other folders)
