[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/store",
    "crates/auth-server",
    "crates/admin-server",
    "launcher/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
