[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/store",
    "crates/auth-server",
    "crates/admin-server",
    "crates/telegram-bot",
    "launcher/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
