[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/store",
    "crates/auth-server",
    "crates/admin-server",
    "crates/telegram-bot",
    "launcher/src-tauri",
]
exclude = ["crates/bootstrap"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Профиль для сборки лаунчера в CI. Отдельный от release, потому что лаунчер —
# это GUI-приложение, которое почти всё время ждёт сеть/диск, а не считает:
# выигрыш fat-LTO в рантайме для него околонулевой, а в сборку fat-LTO +
# codegen-units=1 бьёт сильно (финальная LTO-стадия не кешируется и гоняется
# заново каждый релиз). thin-LTO + codegen-units=16 дают почти ту же
# оптимизацию, но собираются заметно быстрее. backend-серверы по-прежнему
# собираются профилем release (fat-LTO) — он им нужен для рантайм-производительности.
# Профили должны жить в КОРНЕВОМ Cargo.toml: в членах воркспейса cargo их игнорирует.
[profile.launcher-release]
inherits = "release"
lto = "thin"
codegen-units = 16
