[package]
name = "admin-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Admin REST API: build (modpack) management, uploads and client manifest."

[dependencies]
protocol = { path = "../protocol" }
store = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["fs"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
sha1 = "0.10"
sha2 = { workspace = true }
time = { workspace = true }
russh = "0.61"
russh-sftp = "2"
zip = "2"
toml = "0.8"
tempfile = "3"
futures-util = "0.3"
