[package]
name = "auth-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Yggdrasil-compatible auth server (login, sessions, skins) for the launcher."

[dependencies]
protocol = { path = "../protocol" }
store = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
rand = { workspace = true }
time = { workspace = true }
rsa = { version = "0.9", features = ["sha1", "pem"] }
sha1 = { version = "0.10", features = ["oid"] }
