[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared PostgreSQL storage layer (accounts, sessions, builds) for auth-server and admin-server."

[dependencies]
protocol = { path = "../protocol" }
serde = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "time",
] }
time = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
thiserror = "1"
tracing = { workspace = true }
argon2 = "0.5"

[dev-dependencies]
tokio = { workspace = true }
