[package]
name = "telegram-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telegram bot service: 2FA code delivery and admin notifications via DB outbox."

[dependencies]
store = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
