[package]
name = "telegram-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telegram bot service: 2FA code delivery and admin notifications via DB outbox."

[dependencies]
store = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { workspace = true }
