[package]
name = "launcher"
version = "0.0.0"
edition = "2021"
description = "Minecraft launcher (Tauri)"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha1 = "0.10"
protocol = { path = "../../crates/protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
