[package]
name = "launcher"
version = "0.0.0"
edition = "2021"
description = "Minecraft launcher (Tauri)"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha1 = "0.10"
protocol = { path = "../../crates/protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
futures-util = "0.3"
toml = { version = "0.8", default-features = false, features = ["parse"] }
tokio = { version = "1", features = ["sync", "time"] }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
hickory-resolver = { version = "0.25", default-features = false, features = ["tokio", "system-config"] }

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[lib]
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[package.metadata.bundle]
identifier = "com.stardust.launcher"
icon = ["icons/icon.ico", "icons/icon.icns", "icons/32x32.png", "icons/128x128.png"]
